# recording-test

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs
src/encoder/: acffmpeg.rs  cidre.rs  mac.rs  mod.rs  win.rs  windowsrs.rs
src/encoder/win/: mod.rs
src/encoder/xwin/: encoder.rs  mod.rs
