[package]
name = "recording-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-ffmpeg = { git = "https://github.com/helmerapp/rust-ac-ffmpeg", tag = "helmer-v0.18.1" }
crabgrab = { path = "../CrabGrab", features = ["bitmap"] }
crossbeam-channel = "0.5.13"
pollster = "0.3.0"
anyhow = "1.0.86"
cidre = { git = "https://github.com/yury/cidre", rev = "1e008bec49a0f97aeaaea6130a0ba20fe00aa03b", default-features = false, features = [
	"private",
	"blocks",
	"async",
	"av",
	"ca",
	"cm",
	"dispatch",
	"macos_13_0",
] }
screencapturekit = "=0.3.2"
core-foundation = "0.10.0"
core-media-rs = "0.3.4"
core-graphics = "0.24.0"
