[package]
name = "recording-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# ac-ffmpeg = { git = "https://github.com/helmerapp/rust-ac-ffmpeg", tag = "helmer-v0.18.1" }
crabgrab = { git = "https://github.com/helmerapp/CrabGrab", features = ["bitmap", "dx11"] }
crossbeam-channel = "0.5.13"
pollster = "0.3.0"
anyhow = "1.0.86"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Foundation_Metadata",
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media_Core",
    "Media_MediaProperties",
    "Media_Transcoding",
    "Security_Cryptography",
    "Storage_Streams",
    "Storage",
    "System",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
] }

[target.'cfg(macos)'.dependencies]
cidre = { git = "https://github.com/yury/cidre", rev = "1e008bec49a0f97aeaaea6130a0ba20fe00aa03b", default-features = false, features = [
	"private",
	"blocks",
	"async",
	"av",
	"ca",
	"cm",
	"dispatch",
	"macos_13_0",
] }